// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dashboard User navigates to dashboard 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  keyboardShouldPersistTaps="always"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 650,
      "width": "100%",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <FlatList
          data={Array []}
          disableVirtualization={false}
          extraData={
            Object {
              "dashboardData": Array [],
              "errorMsg": "",
              "loading": false,
              "token": "",
            }
          }
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          showsVerticalScrollIndicator={false}
          updateCellsBatchingPeriod={50}
          windowSize={21}
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</ScrollViewMock>
`;

exports[`dashboard User navigates to dashboard 2`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  keyboardShouldPersistTaps="always"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 650,
      "width": "100%",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <FlatList
          data={Array []}
          disableVirtualization={false}
          extraData={
            Object {
              "dashboardData": Array [],
              "errorMsg": "",
              "loading": false,
              "token": "",
            }
          }
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          showsVerticalScrollIndicator={false}
          updateCellsBatchingPeriod={50}
          windowSize={21}
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</ScrollViewMock>
`;

exports[`dashboard User navigates to dashboard 3`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  keyboardShouldPersistTaps="always"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 650,
      "width": "100%",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <FlatList
          data={Array []}
          disableVirtualization={false}
          extraData={
            Object {
              "dashboardData": Array [],
              "errorMsg": "",
              "loading": false,
              "token": "",
            }
          }
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          showsVerticalScrollIndicator={false}
          updateCellsBatchingPeriod={50}
          windowSize={21}
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</ScrollViewMock>
`;

exports[`dashboard User navigates to dashboard 4`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  keyboardShouldPersistTaps="always"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 650,
      "width": "100%",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <FlatList
          data={
            Array [
              Object {
                "attributes": Object {
                  "created_at": "2021-03-08T17:10:08.139Z",
                  "id": 1,
                  "title": "Dashboard_title_1",
                  "updated_at": "2021-03-08T17:10:08.139Z",
                  "value": 1,
                },
                "id": 1,
                "type": "dashboard",
              },
              Object {
                "attributes": Object {
                  "created_at": "2021-03-08T17:10:36.867Z",
                  "id": 2,
                  "title": "Dashboard 5",
                  "updated_at": "2021-03-08T17:10:36.867Z",
                  "value": 5,
                },
                "id": 2,
                "type": "dashboard",
              },
            ]
          }
          disableVirtualization={false}
          extraData={
            Object {
              "dashboardData": Array [
                Object {
                  "attributes": Object {
                    "created_at": "2021-03-08T17:10:08.139Z",
                    "id": 1,
                    "title": "Dashboard_title_1",
                    "updated_at": "2021-03-08T17:10:08.139Z",
                    "value": 1,
                  },
                  "id": 1,
                  "type": "dashboard",
                },
                Object {
                  "attributes": Object {
                    "created_at": "2021-03-08T17:10:36.867Z",
                    "id": 2,
                    "title": "Dashboard 5",
                    "updated_at": "2021-03-08T17:10:36.867Z",
                    "value": 5,
                  },
                  "id": 2,
                  "type": "dashboard",
                },
              ],
              "errorMsg": "",
              "loading": false,
              "token": "TOKEN",
            }
          }
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          showsVerticalScrollIndicator={false}
          updateCellsBatchingPeriod={50}
          windowSize={21}
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</ScrollViewMock>
`;

exports[`dashboard User navigates to dashboard 5`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  keyboardShouldPersistTaps="always"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 650,
      "width": "100%",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
          Data Not Found
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</ScrollViewMock>
`;

exports[`dashboard User navigates to dashboard 6`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  keyboardShouldPersistTaps="always"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 650,
      "width": "100%",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
          Something went wrong
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</ScrollViewMock>
`;

exports[`dashboard User navigates to dashboard 7`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  keyboardShouldPersistTaps="always"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 650,
      "width": "100%",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
          Something went wrong
        </Text>
      </View>
    </View>
  </TouchableWithoutFeedback>
</ScrollViewMock>
`;
